compiler/lyra/src/test/resources/semantic_errors/InheritSelf.ly
class A extends A {
    def main { }
}